# cookie-bank

./: README.md  installer.py  pyproject.toml
chromium/: background.js  manifest.json
firefox/: manifest.json  popup.html  popup.js  styles.css
src/: adapter.py  broker.py  client.py  constants.py  ipc.py  locking.py  logging_config.py  native_messaging.py  paths.py  peer.py  protocol.py
