[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cookie-bank"
version = "0.1.0"
description = "Browser cookie write broker for Web API client programs"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
cookie-bank-adapter = "adapter:main"
cookie-bank-client = "client:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "adapter",
  "broker",
  "client",
  "constants",
  "ipc",
  "locking",
  "logging_config",
  "native_messaging",
  "paths",
  "peer",
  "protocol",
]
